--- a/public/blog.html
+++ b/public/blog.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>lpap</h1>
+    <p><a href="https://lpap.me">lpap</a></p>
 </body>
 </html>
